--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
+staticfiles/
 
 # Flask instance folder
 instance/
@@ -86,3 +87,9 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# bower project settings
+static/bower_components
+
+# local db file
+db.sqlite3
