--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
      "angular-ui-router": "~0.2.18",
      "angular-bootstrap": "~1.2.2",
      "angular-bootstrap-multiselect": "~0.3.5",
+     "angular-toastr": "~1.7.0",
      "bootstrap": "~3.3.6",
      "angular-smart-table": "2.1.8",
      "angular-resource":  "~1.5.4"
